--- a/stylesheets/sport-styles.css
+++ b/stylesheets/sport-styles.css
@@ -20,11 +20,14 @@
 
 .sport-image-div {
     width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .sport-image {
     width: 100%;
     margin: 20px 0;
+    max-width: 1000px;
 }
 
 @media screen and (max-width: 800px) {
