--- a/stylesheets/sport-styles.css
+++ b/stylesheets/sport-styles.css
@@ -37,3 +37,29 @@
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     }
 }
+.event-grid {
+	display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
+.event-image-container {
+	width: 100%;
+	margin-bottom: 0;
+	display: flex;
+	justify-content: center;
+}
+
+.event-image {
+	width: 100%;
+}
+
+h3 {
+    margin-top: 50px;
+}
+
+@media screen and (max-width: 900px) {
+    .event-grid {
+        grid-template-columns: 1fr;
+    }
+}
